syntax = "proto3";

package sp;
option go_package = "github.com/dizzrt/dauth/api/gen/sp;sp";

import "base/base.proto";
import "sp/sp_common.proto";
import "google/api/annotations.proto";

message CreateServiceProviderRequest {
    string name = 1;
    string description = 2;
    string secret = 3;
    string redirect_uri = 4;
    repeated uint32 scopes = 5;

    base.Base base = 255;
}

message CreateServiceProviderResponse {
    uint32 sp_id = 1;

    base.BaseResp base_resp = 255;
}

message GetServiceProviderRequest {
    uint32 sp_id = 1;

    base.Base base = 255;
}

message GetServiceProviderResponse {
    ServiceProvider sp = 1;

    base.BaseResp base_resp = 255;
}

message ValidateServiceProviderRequest {
    uint32 sp_id = 1;
    string scope = 2;

    base.Base base = 255;
}

message ValidateServiceProviderResponse {
    bool is_ok = 1;
    string reason = 2;

    base.BaseResp base_resp = 255;
}

service ServiceProviderService {
    // CreateServiceProvider creates a new service provider.
    rpc CreateServiceProvider(CreateServiceProviderRequest) returns (CreateServiceProviderResponse) {
        option (google.api.http) = {
            post: "/sp/create"
            body: "*"
        };
    }

    // GetServiceProvider gets the service provider by id.
    rpc GetServiceProvider(GetServiceProviderRequest) returns (GetServiceProviderResponse) {}

    // ValidateServiceProvider validates the service provider and scope.
    rpc ValidateServiceProvider(ValidateServiceProviderRequest) returns (ValidateServiceProviderResponse) {}
}