syntax = "proto3";

package sp;

option go_package = "github.com/dizzrt/dauth/api/gen/sp;sp";

message ServiceProvider {
  enum Status {
    UNSPECIFIED = 0;
    ACTIVE = 1;
    INACTIVE = 2;
    DELETED = 3;
  }

  uint32 id = 1;
  string name = 2;
  string description = 3;
  string redirect_uri = 4;
  Status status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
