syntax = "proto3";

package user;

import "ellie/errors/errors.proto";
import "google/api/annotations.proto";

option go_package = "github.com/dizzrt/dauth/api/gen/user;user";

enum Errors {
  UNKNOWN = 0 [(ellie.errors.code) = 1000];
  INVALID_PARAMS = 1001 [(ellie.errors.code) = 1001];
  INVALID_PASSWORD = 1002 [(ellie.errors.code) = 1002];
  USER_NOT_FOUND = 1003 [(ellie.errors.code) = 1003];
  EMAIL_ALREADY_EXISTS = 1004 [(ellie.errors.code) = 1004];
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
        post: "/user"
        body: "*"
    };
  }

  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {
    option (google.api.http) = {get: "/user/{id}"};
  }
}

message User {
    uint32 id = 1;
    string email = 2;
    string username = 3;
    uint32 status = 4;
    uint64 last_login_at = 5;
    uint64 created_at = 6;
    uint64 updated_at = 7;
    uint64 deleted_at = 8;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message CreateUserResponse {
    uint32 id = 1;
}

message GetUserByIDRequest {
    uint32 id = 1;
}

message GetUserByIDResponse {
    User user = 1;
}
